{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 355,
  "lineage": "52e46dfe-20aa-2f8f-2509-43477be05a38",
  "resources": [
    {
      "module": "module.Load_Balancer",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:443370693758:loadbalancer/DEVElasticLB",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "DEVElasticLB-440764773.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "DEVElasticLB",
            "idle_timeout": 60,
            "instances": [
              "i-014292498ae6cf21f",
              "i-0f30b697b7a6f7861"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "DEVElasticLB",
            "security_groups": [
              "sg-069dd25c56fadfc79"
            ],
            "source_security_group": "443370693758/DEV - SG",
            "source_security_group_id": "sg-069dd25c56fadfc79",
            "subnets": [
              "subnet-03a76d8d8f02e04ff",
              "subnet-0eb4c4d7012a31c9e"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.SG.aws_security_group.mysg",
            "module.VPC.aws_subnet.Public_subnet",
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:security-group/sg-069dd25c56fadfc79",
            "description": "It has all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069dd25c56fadfc79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV - SG",
            "name_prefix": "",
            "owner_id": "443370693758",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV - SG"
            },
            "tags_all": {
              "Name": "DEV - SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e803bb850d1b6d6",
            "arn": "arn:aws:ec2:us-east-1:443370693758:elastic-ip/eipalloc-07e803bb850d1b6d6",
            "association_id": "eipassoc-0a2fb898c32727a03",
            "domain": "vpc",
            "id": "eipalloc-07e803bb850d1b6d6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b1f672e4fff27128",
            "private_dns": "ip-10-0-0-91.ec2.internal",
            "private_ip": "10.0.0.91",
            "public_dns": "ec2-34-194-147-243.compute-1.amazonaws.com",
            "public_ip": "34.194.147.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:internet-gateway/igw-0508f62da0d0b3b47",
            "id": "igw-0508f62da0d0b3b47",
            "owner_id": "443370693758",
            "tags": {
              "Name": "DEV -IGW"
            },
            "tags_all": {
              "Name": "DEV -IGW"
            },
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e803bb850d1b6d6",
            "association_id": "eipassoc-0a2fb898c32727a03",
            "connectivity_type": "public",
            "id": "nat-0ceecb3418b695ab0",
            "network_interface_id": "eni-0b1f672e4fff27128",
            "private_ip": "10.0.0.91",
            "public_ip": "34.194.147.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb4c4d7012a31c9e",
            "tags": {
              "Name": "DEV - NAT"
            },
            "tags_all": {
              "Name": "DEV - NAT"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.eip",
            "module.VPC.aws_subnet.Public_subnet",
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:route-table/rtb-0ded7b5a3d550e0a5",
            "id": "rtb-0ded7b5a3d550e0a5",
            "owner_id": "443370693758",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ceecb3418b695ab0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV - Private - RT"
            },
            "tags_all": {
              "Name": "DEV - Private - RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.eip",
            "module.VPC.aws_nat_gateway.mynat",
            "module.VPC.aws_subnet.Public_subnet",
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:route-table/rtb-06b15da20106d96de",
            "id": "rtb-06b15da20106d96de",
            "owner_id": "443370693758",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0508f62da0d0b3b47",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV - Public - RT"
            },
            "tags_all": {
              "Name": "DEV - Public - RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.myigw",
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_private_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6038c6963579ea1",
            "route_table_id": "rtb-0ded7b5a3d550e0a5",
            "subnet_id": "subnet-05641747e29193b7b"
          },
          "dependencies": [
            "module.VPC.aws_eip.eip",
            "module.VPC.aws_nat_gateway.mynat",
            "module.VPC.aws_route_table.Private-RT",
            "module.VPC.aws_subnet.Private_subnet",
            "module.VPC.aws_subnet.Public_subnet",
            "module.VPC.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023463768d407af9b",
            "route_table_id": "rtb-0ded7b5a3d550e0a5",
            "subnet_id": "subnet-03c4c93737cca6a31"
          },
          "dependencies": [
            "module.VPC.aws_eip.eip",
            "module.VPC.aws_nat_gateway.mynat",
            "module.VPC.aws_route_table.Private-RT",
            "module.VPC.aws_subnet.Private_subnet",
            "module.VPC.aws_subnet.Public_subnet",
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046b9eba46d5f5ac4",
            "route_table_id": "rtb-06b15da20106d96de",
            "subnet_id": "subnet-0eb4c4d7012a31c9e"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.myigw",
            "module.VPC.aws_route_table.Public-RT",
            "module.VPC.aws_subnet.Public_subnet",
            "module.VPC.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0372c871700c0c0db",
            "route_table_id": "rtb-06b15da20106d96de",
            "subnet_id": "subnet-03a76d8d8f02e04ff"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.myigw",
            "module.VPC.aws_route_table.Public-RT",
            "module.VPC.aws_subnet.Public_subnet",
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:subnet/subnet-05641747e29193b7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05641747e29193b7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443370693758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV - Private-SN-1"
            },
            "tags_all": {
              "Name": "DEV - Private-SN-1"
            },
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:subnet/subnet-03c4c93737cca6a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c4c93737cca6a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443370693758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV - Private-SN-2"
            },
            "tags_all": {
              "Name": "DEV - Private-SN-2"
            },
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:subnet/subnet-0eb4c4d7012a31c9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb4c4d7012a31c9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443370693758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV - Public-SN-1"
            },
            "tags_all": {
              "Name": "DEV - Public-SN-1"
            },
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:subnet/subnet-03a76d8d8f02e04ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a76d8d8f02e04ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443370693758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV - Public-SN-2"
            },
            "tags_all": {
              "Name": "DEV - Public-SN-2"
            },
            "vpc_id": "vpc-0508134241cc6a1b5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443370693758:vpc/vpc-0508134241cc6a1b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-012d8fc4ad4516422",
            "default_route_table_id": "rtb-0b8f5ddc2c941ad0d",
            "default_security_group_id": "sg-05ae1e60af39894e9",
            "dhcp_options_id": "dopt-0c452f9bad881796f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0508134241cc6a1b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8f5ddc2c941ad0d",
            "owner_id": "443370693758",
            "tags": {
              "Name": "My - DEV - VPC"
            },
            "tags_all": {
              "Name": "My - DEV - VPC"
            }
          }
        }
      ]
    }
  ]
}